# UniversityDegreeCourse

./: CMakeLists.txt  README.md  main.cpp
include/university/: course.h  data.h  display.h  lesson.h  person.h  room.h  student.h  teacher.h  time.h
src/: course.cpp  data.cpp  display.cpp  lesson.cpp  person.cpp  room.cpp  student.cpp  teacher.cpp  time.cpp
